<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28A7DE"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bluetoothButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#FFF1F1F1"
        android:gravity="center"
        android:text="@string/bluetooth"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/device_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/deviceProperties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/device_address"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:autofillHints=""
        android:hint="@string/enter_command"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/black"

        android:text="@string/get_device_properties"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dataFromBle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </ScrollView>


</LinearLayout>